[gd_scene load_steps=10 format=3 uid="uid://cih0kfqy84mcl"]

[ext_resource type="Script" path="res://Scripts/ScriptGenerales/fireBall.gd" id="1_8loij"]
[ext_resource type="Texture2D" uid="uid://cpograh5kdywm" path="res://Assets/Enemies/Fire/fireBall.png" id="2_lryje"]

[sub_resource type="AtlasTexture" id="AtlasTexture_244pn"]
atlas = ExtResource("2_lryje")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhon"]
atlas = ExtResource("2_lryje")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lxec"]
atlas = ExtResource("2_lryje")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l0jv"]
atlas = ExtResource("2_lryje")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb58e"]
atlas = ExtResource("2_lryje")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d6hd1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_244pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lxec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l0jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb58e")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qaxss"]
radius = 22.2036

[node name="FireBall" type="Area2D" groups=["enemigos"]]
z_index = 10
scale = Vector2(0.4, 0.4)
script = ExtResource("1_8loij")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d6hd1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.446296

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -1)
shape = SubResource("CircleShape2D_qaxss")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
